2020-09-21  Keith Marshall  <keith@users.osdn.me>

	Republish mingw32 ncurses-6.2 package set.

	* contrib/mingw32-ncurses.xml (ncurses-6.2-2-mingw32-bin)
	(libncurses-6.2-2-mingw32-dll-6, terminfo-6.2-2-mingw32-data)
	(libncurses-6.2-2-mingw32-dev, ncurses-6.2-2-mingw32-doc)
	(ncurses-6.2-2-mingw32-man, ncurses-6.2-2-mingw32-lic): Add further
	references, noting release number increment.
	(ncurses-*-mingw32-bin): Add previously omitted dependency on...
	(libncurses-%-mingw32-%-dll-6): ...this, which in turn, depends on...
	(libgcc-*-mingw32-*-dll-1): ...this.
	* common/issue.log contrib/issue.log: Update accordingly.

2020-09-14  Keith Marshall  <keith@users.osdn.me>

	Publish mingw32 ncurses-6.2 package set.

	* contrib/mingw32-ncurses.xml (ncurses-6.2-1-mingw32-bin)
	(libncurses-6.2-1-mingw32-dll-6, terminfo-6.2-1-mingw32-data)
	(libncurses-6.2-1-mingw32-dev, ncurses-6.2-1-mingw32-doc)
	(ncurses-6.2-1-mingw32-lic): Add references; mark all previous
	releases as "unavailable for download", due to relocation of...
	(download-host): ...this, to osdn.net
	(ncurses-6.2-1-mingw32-man): New component package; add reference.
	* common/issue.log contrib/issue.log: Update accordingly.

2020-09-11  Keith Marshall  <keith@users.osdn.me>

	Publish mingw32 xz-5.2.5 and liblzma-5.2.5 package set.

	* mingw32/mingw32-xz.xml (download-host): Relocate to osdn.net
	(xz-5.2.5-1-mingw32-lic, xz-5.2.5-2-mingw32-lic)
	(xz-5.2.5-1-mingw32-bin, xz-5.2.5-2-mingw32-bin)
	(liblzma-5.2.5-1-mingw32-dev, liblzma-5.2.5-2-mingw32-dev)
	(liblzma-5.2.5-1-mingw32-dll-5, liblzma-5.2.5-2-mingw32-dll-5)
	(xz-5.2.5-1-mingw32-doc, xz-5.2.5-2-mingw32-doc): Add references;
	mark all previous releases as "unavailable for download".
	(xz-5.2.5-1-mingw32-lang, xz-5.2.5-2-mingw32-lang): Likewise; mark
	as "unavailable" for xz-5.2.5-1; it offers no NLS support.
	(xz-5.2.5-1-mingw32-ext, xz-5.2.5-2-mingw32-ext)
	(xz-5.2.5-1-mingw32-man, xz-5.2.5-2-mingw32-man): Add new
	component package references.