@@ -66,6 +66,7 @@
       <component class="dev">
         <requires eq="mingwrt-%-mingw32-dll.tar" />
         <requires eq="wsl-features-*-mingw32-cfg.tar" />
+        <release tarname="mingwrt-5.4.2-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-5.4.1-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-5.4-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-5.3.4-mingw32-dev.tar.xz" />
@@ -83,6 +84,7 @@
       </component>
 
       <component class="dll">
+        <release tarname="mingwrt-5.4.2-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-5.4.1-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-5.4-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-5.3.4-mingw32-dll.tar.xz" />
@@ -100,6 +102,7 @@
       </component>
 
       <component class="lic">
+        <release tarname="mingwrt-5.4.2-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-5.4.1-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-5.4-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-5.3.4-mingw32-lic.tar.xz" />
@@ -117,6 +120,7 @@
       </component>
 
       <component class="man">
+        <release tarname="mingwrt-5.4.2-mingw32-man.tar.xz" />
         <release tarname="mingwrt-5.4.1-mingw32-man.tar.xz" />
         <release tarname="mingwrt-5.4-mingw32-man.tar.xz" />
         <release tarname="mingwrt-5.3.4-mingw32-man.tar.xz" />
@@ -153,6 +157,9 @@
 
       <component class="dev">
         <requires eq="mingwrt-%-mingw32-dev.tar" />
+        <release tarname="libmingwex-5.4.2-mingw32-dev.tar.xz">
+          <requires eq="libmingwex-%-mingw32-dll-4.tar" />
+        </release>
         <release tarname="libmingwex-5.4.1-mingw32-dev.tar.xz">
           <requires eq="libmingwex-%-mingw32-dll-4.tar" />
         </release>
@@ -198,6 +205,7 @@
       </component>
 
       <component class="dll">
+        <release tarname="libmingwex-5.4.2-mingw32-dll-4.tar.xz" />
         <release tarname="libmingwex-5.4.1-mingw32-dll-4.tar.xz" />
         <release tarname="libmingwex-5.4-mingw32-dll-4.tar.xz" />
         <release tarname="libmingwex-5.3.4-mingw32-dll-2.tar.xz" />
@@ -234,6 +242,7 @@
       <licence tarname="mingwrt-%-mingw32-lic.tar.%" />
 
       <component class="dev">
+        <release tarname="w32api-5.4.2-mingw32-dev.tar.xz" />
         <release tarname="w32api-5.4.1-mingw32-dev.tar.xz" />
         <release tarname="w32api-5.4-mingw32-dev.tar.xz" />
         <release tarname="w32api-5.3.4-mingw32-dev.tar.xz" />
