@@ -1,3 +1,12 @@
+2021-04-12  Keith Marshall  <keith@users.osdn.me>
+
+	Publish MinGW.org WSL-5.4.2 package set.
+
+	* mingw32/mingw32-runtime.xml (mingwrt-5.4.2-dev, mingwrt-5.4.2-dll)
+	(mingwrt-5.4.2-lic, mingwrt-5.4.2-man, libmingwex-5.4.2-dll-4)
+	(libmingwex-5.4.2-dev, w32api-5.4.2-dev): Add references.
+	* common/issue.log mingw32/issue.log: Update accordingly.
+
 2020-09-21  Keith Marshall  <keith@users.osdn.me>
 
 	Republish mingw32 ncurses-6.2 package set.
@@ -58,7 +67,7 @@
 	Publish MinGW.org WSL-5.4.1 package set.
 
 	* mingw32/mingw32-runtime.xml (mingwrt-5.4.1-dev, mingwrt-5.4.1-dll)
-	(mingwrt-5.4.1-lic, mingwrt-5.4.1-man, libmingwex-5.3.4.1-dll-4)
+	(mingwrt-5.4.1-lic, mingwrt-5.4.1-man, libmingwex-5.4.1-dll-4)
 	(libmingwex-5.4.1-dev, w32api-5.4.1-dev): Add references.
 	* common/issue.log mingw32/issue.log: Update accordingly.
 
